Thu Jan  4 17:28:05 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/utils.rb (WEBrick::Utils::TimeoutHandler#initialize):
	  Arrays could not be modified in its each block. [ruby-dev:30063]

Thu Jan  4 16:57:14 2007  Koichi Sasada  <ko1@atdot.net>

	* yarv_version.h : removed.

	* common.mk : remove yarv_version.h from rules

	* yarvcore.h (Init_yarvcore) : remove useless constants

Thu Jan  4 17:00:06 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (Init_ossl_asn1):
	  OpenSSL::ASN1::ASN1Data#value,#tag,#tag_class and 
	  OpenSSL::ASN1::BitString#unused_bits should be public.

Thu Jan 04 13:45:10 2007  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.ci : fix last changes around PTHREAD_STACK_MIN.

Thu Jan 04 13:42:47 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk : restore changes.

Thu Jan 04 10:33:54 2007  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.ci : fix to skip using PTHREAD_STACK_MIN.
	[ruby-dev:30063]

Thu Jan 04 10:30:11 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/run_rite.rb (bm) : fix to use lines.

Wed Jan  3 18:49:15 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_getline): lineno update condition was wrong.
	  [ruby-dev:30065]

	* io.c (rb_io_getline_fast): ditto.

Wed Jan  3 11:36:51 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (ruby_dup): start GC on ENOMEM as well.

Tue Jan  2 10:29:54 2007  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c: fix to compile on YARV
	  ruby_errinfo -> rb_errinfo()

Mon Jan 01 08:07:06 2007  Koichi Sasada  <ko1@atdot.net>

	* ext/tk/tcltklib.c : fix to compile on YARV
          ruby_errinfo -> rb_errinfo(),
          ruby_safe_level -> rb_safe_level().

Mon Jan 01 07:57:17 2007  Koichi Sasada  <ko1@atdot.net>

	* test/drb/test_drbssl.rb : fix to skip drb tests.

Mon Jan  1 06:13:11 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parsers/c_parser.rb: Make Rdoc accessible.  Update constant
	value information.
